@startuml

title

Beyond Core : Plateform

BY-1890, BY-2079
BY-2050, BY-2006, BY-2045, BY-1979, BY-2025

end title

' hide the spot
' hide circle

' avoid problems with angled crows feet
' skinparam linetype ortho


' https://gist.github.com/QuantumGhost/0955a45383a0b6c0bc24f9654b3cb561

' uncomment the line below if you're using computer with a retina display
' skinparam dpi 300
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
' we use bold for primary key
' green color for unique
' and underscore for not_null
!define primary_key(x) <b>x</b>
!define foreign_key(x) <b>x</b>
!define unique(x) <color:green>x</color>
!define not_null(x) <u>x</u>
' other tags available:
' <i></i>
' <back:COLOR></color>, where color is a color name or html color code
' (#FFAACC)
' see: http://plantuml.com/classes.html#More
hide methods
hide stereotypes

Table(account, "account\n(core)") {
  primary_key(pk_id) BIGSERIAL
  ---
  foreign_key(pk_fk_companyid) BIGINT
  foreign_key(pk_fk_idpid) BIGINT
  ---
  not_null(unique(email)) TEXT
  not_null(firstname) TEXT
  not_null(lastname) TEXT
  unique(providerId) TEXT
  not_null(status) TEXT
  not_null(isSuperAdmin) BOOLEAN
}

Table(company, "company\n(core)") {
  primary_key(pk_id) BIGSERIAL
  ---
  not_null(unique(label)) TEXT
  not_null(description) TEXT
  not_null(isDeleted) boolean <default: false>
  not_null(isSuperAdmin) BOOLEAN
}

Table(companyAccount, "company_account\n(core)") {
  foreign_key(pk_fk_companyid) BIGINT
  foreign_key(pk_fk_accountid) BIGINT
  ---
  not_null(isAdmin) BOOLEAN
}
note left
  BY-2045
end note

Table(idp, "idp\n(core)") {
  primary_key(pk_id) BIGSERIAL
  ---
  foreign_key(pk_fk_companyid) BIGINT
  ---
  not_null(unique(name)) TEXT
  not_null(paternEmail) TEXT
}

Table(product, "product\n(core)") {
  primary_key(pk_id) BIGSERIAL
  ---
  foreign_key(pk_fk_companyid) BIGINT
  ---
  not_null(label) TEXT
  description JSONB
  isAdministrationApp BOOLEAN
  image BINARY or TEXT
  icon BINARY or TEXT
  urlApp TEXT
  urlAdmin TEXT
  openTab BOOLEAN
}
note right
  List:
  - Reality
  - Reality Manager
  - Beyond Manger
end note

Table(productCompanyAccount, "product_company_account\n(core)") {
  foreign_key(pk_fk_companyid) BIGINT
  foreign_key(pk_fk_productid) BIGINT
  foreign_key(pk_fk_accountid) BIGINT
  ---
  not_null(isAdmin) BOOLEAN
  not_null(status) TEXT
}


' relationships

' product company account
company "1" ||--o{ "0..N" productCompanyAccount: A company may \nhave many products
product "1" ||--o{ "0..N" productCompanyAccount: A product may \ncontain many companies
account "1" ||--o{ "0..N" productCompanyAccount: A account may \nhave many products

' company
company "1" ||--o{ "0..N" companyAccount : A company may \nhave many accounts
companyAccount "1" }o--|| "0..N" account : A account may \nhave only one company \nbut can administres many companies
' idp "0..N" }o--|| "1" company : A company may \nhave many IDPs

legend bottom
  Zero or One	|o--
  Exactly One	||--
  Zero or Many	}o--
  One or Many	}|--
  -=-=-=-=-=-=-=-
  primary_key("primary key")
  foreign_key("foreign key")
  unique(unique)
  not_null("not null")
endlegend

@enduml
